force-app/main/default/objects/RuleSetResult__c/RuleSetResult__c.object-meta.xml
<CustomObject>
    <label>RuleSet Result</label>
    <nameField>
        <displayFormat>RSR-{0000}</displayFormat>
        <label>RuleSetResult</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RuleSet Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>