force-app/main/default/objects/RuleSetResult__c/fields/ComplianceScore__c.field-meta.xml
<CustomField>
    <fullName>ComplianceScore__c</fullName>
    <formula>(PriorityMin__c-1)/5</formula>
    <label>Compliance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>