force-app/main/default/objects/RuleSetResult__c/fields/PriorityMin__c.field-meta.xml
<CustomField>
    <fullName>PriorityMin__c</fullName>
    <label>Priority</label>
    <summarizedField>RuleResult__c.Priority__c</summarizedField>
    <summaryForeignKey>RuleResult__c.RuleSetResult__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>