force-app/main/default/objects/RuleSetResult__c/fields/PriorityScore__c.field-meta.xml
<CustomField>
    <fullName>PriorityScore__c</fullName>
    <formula>1-((PriorityMin__c-1)/4)</formula>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>