force-app/main/default/objects/RuleSetResult__c/fields/StandardScore__c.field-meta.xml
<CustomField>
    <fullName>StandardScore__c</fullName>
    <formula>(PriorityMin__c-1)/4</formula>
    <label>Standard Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>