force-app/main/default/objects/RuleSetResult__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Best Practices</fullName>
            </value>
            <value>
                <fullName>Code Style</fullName>
            </value>
            <value>
                <fullName>Custom Apex Rules</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Error Prone</fullName>
            </value>
            <value>
                <fullName>LowCode vs ProCode</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>