force-app/main/default/objects/RuleSetResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>MetadataFile__c</columns>
    <columns>Type__c</columns>
    <columns>PriorityMin__c</columns>
    <columns>PriorityScore__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>